# slack-parse

./: .gitignore  Application.hs  Foundation.hs  slack-parse.cabal  stack-parse.cabal.save0  stack.yaml
Handler/: Channel.hs  Common.hs  Home.hs  ShowChannel.hs
Slack/: Slack.hs
Slack/Internal/: Parsing.hs  Types.hs
app/: devel.hs
config/: keter.yml  routes
slack/: slack.cabal  stack.yaml
slack/src/: Slack.hs
slack/src/Slack/Internal/: Reading.hs  Types.hs
slack/src/Slack/Internal/Types/: Channel.hs  ChatMessage.hs  SlackArchive.hs  User.hs
templates/: archive-error.hamlet  default-layout-wrapper.hamlet  homepage.hamlet
