name:                slack
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/slack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Slack
                       Slack.Internal.Reading
                       Slack.Internal.Types
                       Slack.Internal.Types.Channel
                       Slack.Internal.Types.ChatMessage
                       Slack.Internal.Types.SlackArchive
                       Slack.Internal.Types.User

  build-depends:       base
                     , aeson
                     , text
                     , bytestring
                     , transformers
                     , directory
                     , containers

  default-extensions:  OverloadedStrings
                       GeneralizedNewtypeDeriving

  default-language:    Haskell2010